--- a/styles/BuyCards.module.scss
+++ b/styles/BuyCards.module.scss
@@ -6,6 +6,10 @@ body {
   font-family: "Noto Sans", sans-serif;
 } */
 
+.container {
+  background: #961919;
+}
+
 .card {
   display: flex;
   flex-direction: column;
