--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,3 +1,11 @@
+/* body {
+  background-color: #282c34;
+  color: white;
+  padding: 40px;
+  font-family: Arial;
+  text-align: center;
+} */
+
 .container {
   min-height: 100vh;
   padding: 0 0.5rem;
